--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -29,17 +29,24 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  justify-content: center;
 }
 
 .itemBtn {
-  background-color: white;
-  border: none;
+  background-color: beige;
+  border: 1px solid #ccc;
   padding: 10px;
   cursor: pointer;
-  width: 100%;
+  width: 150px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   text-align: center;
   border-radius: 5px;
   transition: background-color 0.3s;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .itemBtn:hover {
@@ -47,7 +54,9 @@
 }
 
 .btnImage {
-  max-width: 100px;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
   display: block;
   margin: 0 auto 10px;
   border-radius: 5px;
@@ -75,7 +84,6 @@
 }
 
 .addItemsMenu {
-  border: 1px solid #ccc;
   padding: 10px;
   margin-bottom: 10px;
 }
