--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -10,19 +10,17 @@
 
 .mainMenu {
   display: flex;
-  border: 2px solid #ccc;
-  padding: 10px;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+
+.menu-title {
+  color: grey;
+  text-align: center;
 }
 
 .OrderedItems,
 .MenuItems {
-  border: 1px solid #ccc;
-  padding: 10px;
   flex: 1;
-  background-color: #f9f9f9;
 }
 
 .gridContainer {
@@ -33,8 +31,8 @@
 }
 
 .itemBtn {
-  background-color: beige;
-  border: 1px solid #ccc;
+  background-color: white;
+  border: 0.5px solid #ccc;
   padding: 10px;
   cursor: pointer;
   width: 150px;
@@ -50,7 +48,7 @@
 }
 
 .itemBtn:hover {
-  background-color: greenyellow;
+  background-color: gainsboro;
 }
 
 .btnImage {
@@ -68,19 +66,21 @@
 }
 
 .removeBtn {
-  background-color: #e58b8b;
+  background-color: darkgrey;
   color: #fff;
   border: none;
-  padding: 5px 10px;
+  padding: 10px;
   cursor: pointer;
   border-radius: 5px;
   float: right;
   margin-top: 5px;
-
+  font-size: 14px;
+  transition: background-color 0.3s, transform 0.3s;
 }
 
 .removeBtn:hover {
   background-color: #ff3333;
+  transform: scale(1.05);
 }
 
 .addItemsMenu {
@@ -90,7 +90,7 @@
 
 .orderDetailsMenu {
   border: 1px solid #ccc;
-  padding: 10px;
+  padding: 15px;
   margin-bottom: 20px;
 }
 
@@ -99,22 +99,22 @@
   font-weight: bold;
 }
 
-.totalPrice {
-  font-size: 25px;
-  font-weight: bold;
-  color: red;
-}
-
 .orderItems strong {
-  color: green;
+  margin-left: 15px;
+  color: grey;
 }
 
 .orderItems span {
-  color: #0008ff;
+  color: grey;
+  margin-right: 15px;
 }
 
-.textInfo {
-  font-size:30px;
-  font-weight: bold;
-  color: #049400;
+.textInfo,
+.ordered-text{
+  text-align: center;
+  color: grey;
+}
+
+h2 {
+  color: grey;
 }
